--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
 
 /* Your CSS Code here. */
+.holder{
+	display : flex;
+	justify-content : center;
+	flex-wrap : wrap;
+}
+.item{
+	width : 100px;
+	height: 100px;
+	
+}
+.item1{
+	background-color: green;
+}
+.item2{
+	background-color: red;
+}
+.item3{
+	background-color: blue;
+}
